# simple-sc

./: .clang-format  CMakeLists.txt  LICENSE  README.md  buffer.hh  main.cc  pipewire_capture.cc  pipewire_video_capture  screencast_portal.cc  screencast_portal.hh  shm.cc  shm.hh  util.hh
.github/workflows/: build.yml
